--- a/index.html
+++ b/index.html
@@ -74,16 +74,80 @@
             <h3 class="text-xl font-semibold mb-4">Protected Industry Leaders</h3>
             <ul class="space-y-2 text-gray-700">
               <li class="flex items-center gap-2">
-                <i data-lucide="badge-check" class="w-4 h-4"></i> Google
+                <i data-lucide="badge-check" class="w-4 h-4"></i>
+                <a href="https://bughunters.google.com/profile/77fa3063-eb4c-41b8-8c08-051bec9cc64e" 
+                   target="_blank" 
+                   rel="noopener noreferrer"
+                   class="text-[#703170] hover:underline">
+                  Google (5 Awards)
+                </a>
               </li>
               <li class="flex items-center gap-2">
-                <i data-lucide="badge-check" class="w-4 h-4"></i> BBC
+                <i data-lucide="badge-check" class="w-4 h-4"></i>
+                <a href="https://www.bbc.com/backstage/security-disclosure-policy/acknowledgements/" 
+                   target="_blank" 
+                   rel="noopener noreferrer"
+                   class="text-[#703170] hover:underline">
+                  BBC (Dec 2022)
+                </a>
               </li>
               <li class="flex items-center gap-2">
-                <i data-lucide="badge-check" class="w-4 h-4"></i> United Nations
+                <i data-lucide="badge-check" class="w-4 h-4"></i>
+                <a href="https://unite.un.org/content/hall-fame/list" 
+                   target="_blank" 
+                   rel="noopener noreferrer"
+                   class="text-[#703170] hover:underline">
+                  United Nations (July 2022)
+                </a>
               </li>
               <li class="flex items-center gap-2">
-                <i data-lucide="badge-check" class="w-4 h-4"></i> And many more...
+                <i data-lucide="badge-check" class="w-4 h-4"></i>
+                <a href="https://drive.google.com/file/d/1tuDdLXPTTiK5YOrxbJxfsR9D7z6xTfmN/view" 
+                   target="_blank" 
+                   rel="noopener noreferrer"
+                   class="text-[#703170] hover:underline">
+                  Mycroft AI
+                </a>
+              </li>
+              <li class="flex items-center gap-2">
+                <i data-lucide="badge-check" class="w-4 h-4"></i>
+                <a href="https://drive.google.com/file/d/1YgVWhnm2J4J2bQVC3Ay_MC5G1gyy9vwn/view" 
+                   target="_blank" 
+                   rel="noopener noreferrer"
+                   class="text-[#703170] hover:underline">
+                  Open Money
+                </a>
+              </li>
+              <li class="flex items-center gap-2">
+                <i data-lucide="badge-check" class="w-4 h-4"></i>
+                <a href="https://drexel.edu/it/security/services-processes/bug-bounty/" 
+                   target="_blank" 
+                   rel="noopener noreferrer"
+                   class="text-[#703170] hover:underline">
+                  Drexel University (2023)
+                </a>
+              </li>
+              <li class="flex items-center gap-2">
+                <i data-lucide="badge-check" class="w-4 h-4"></i>
+                <a href="https://drive.google.com/file/d/1hAmr0sQ9PPWPpYNe6xQa4XuehjmGUB5E/view" 
+                   target="_blank" 
+                   rel="noopener noreferrer"
+                   class="text-[#703170] hover:underline">
+                  Licious
+                </a>
+              </li>
+              <li class="flex items-center gap-2">
+                <i data-lucide="badge-check" class="w-4 h-4"></i>
+                <a href="https://drive.google.com/file/d/1DevEpe4QlVPnGQZEIsPTKt8h5G1pXq4Z/view" 
+                   target="_blank" 
+                   rel="noopener noreferrer"
+                   class="text-[#703170] hover:underline">
+                  Yatra
+                </a>
+              </li>
+              <li class="flex items-center gap-2">
+                <i data-lucide="badge-check" class="w-4 h-4"></i>
+                <span>And many more...</span>
               </li>
             </ul>
           </div>
