--- a/index.html
+++ b/index.html
@@ -257,7 +257,8 @@
             </div>
           </div>
 
-          <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 md:gap-6 max-w-3xl mx-auto">
+          <!-- Changed to stack vertically on mobile, horizontal on desktop -->
+          <div class="grid grid-cols-1 md:grid-cols-2 gap-4 md:gap-6 max-w-3xl mx-auto">
             <div class="bg-white p-3 md:p-4 rounded-lg border border-gray-200 shadow-sm">
               <i data-lucide="lock" class="text-[#703170] mb-2 w-5 h-5 md:w-6 md:h-6"></i>
               <h3 class="text-base md:text-lg lg:text-xl font-semibold mb-1 md:mb-2">Law Enforcement Collaboration</h3>
